# macos-grok-agent

./: .gitignore  .prettierignore  PLAN.md  PLAN.md.bak  README.md  SUBAAGENT.md.bak  SUBAGENT.md  TODO.md  build-dmg.sh  build.sh  build.spec  create-package.sh  eslint.config.js  fix_base64.cjs  fix_empty.cjs  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.sh  start.sh  tailwind.config.js  tsconfig.json  update_imagegen.cjs  vite.config.ts  vitest.config.ts
app/src/main/: AndroidManifest.xml
docs/: CLEAR_ALGO_MATCH_ANALYSIS.md  vertex-ai-setup.md
scripts/: 02-enable-vertex-models.sh  gen_icon.py  setup-vertex-sa.sh  sync-version.mjs
src/: App.tsx  index.css  main.tsx  models.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: agent-tools.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_chain.rs  api.rs  codegen.rs  main.rs  mcp.rs  skills.rs  storage.rs
src/components/: Button.tsx  ChatPanel.tsx  Checkbox.tsx  CodingAgentPanel.tsx  DeepResearchPanel.tsx  GeminiLivePanel.tsx  GeminiTTSPanel.tsx  Header.tsx  ImageGenerator.tsx  Input.tsx  KnowledgeBasePanel.tsx  LayoutParserPanel.tsx  ModelSelector.tsx  ProjectsPanel.tsx  ResearchSessionTabs.tsx  Select.tsx  SettingsPanel.tsx  SpeechToTextPanel.tsx  TextArea.tsx  VeoPanel.tsx  index.ts
src/components/ui/: tabs.tsx  textarea.tsx
src/features/: index.ts
src/features/agents/: index.ts
src/features/chat/: index.ts
src/features/image/: index.ts
src/features/projects/: index.ts
src/features/settings/: index.ts
src/features/video/: index.ts
src/features/voice/: index.ts
src/hooks/: index.ts  useChat.ts  useDeepResearch.ts  useResearchSessions.ts  useSettings.ts  useSubAgent.ts
src/lib/: logger.ts  sanitize.ts
src/lib/__tests__/: sanitize.test.ts  utils.test.ts
src/shared/components/: Checkbox.tsx  ErrorBoundary.tsx  Header.tsx  Input.tsx  MarkdownRenderer.tsx  ModelSelector.tsx  Select.tsx  TextArea.tsx  Toast.tsx  index.ts
src/shared/constants/: models.ts  voices.ts
src/shared/schemas/: index.ts
src/shared/types/: index.ts
src/store/: appStore.ts
src/store/__tests__/: appStore.test.ts  slices.test.ts
src/store/slices/: index.ts  modalSlice.ts  modelSlice.ts  navigationSlice.ts
src/test/: setup.ts
src/vertex_desktop/: main.py
(+51 files in other folders)
