# pyproject.toml
[project]
name = "vertex-ai-client" # Or whatever you want your pip-installable name to be
version = "1.5.1"
description = "Desktop client for Vertex AI"
# ... other project metadata ...

[tool.setuptools.packages.find] # <--- Changed this line! 'find' is now a table.
where = ["src"] # <--- This is the new required key, value is an array.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
